--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/node": "^16.18.75",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-image-gallery": "^1.2.4",
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-image-gallery": "^1.3.0",
     "react-intersection-observer": "^9.8.2",
     "react-router-dom": "^6.21.3",
     "react-scripts": "5.0.1",
